# rust-path-opener

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  TODO.md  justfile  release-plz.toml
docs/planning/backlogs/: backlogs.base
docs/planning/epics/: epics.base
docs/planning/milestones/: milestones.base
docs/planning/tasks/: 2026-05-19-obsidian-vault-id-uri.md  tasks.base
src/: builder.rs  cmd.rs  error.rs  info.rs  lib.rs  obsidian.rs
src/builder/: repo.rs  version.rs
src/builder/repo/: worktree.rs
